# shard

./: .gitignore  LICENSE  README.md  todo.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/shard.icon/: icon.json
src-tauri/src/: lib.rs  main.rs  mcp_simple.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
ui/src/: main.ts  style.css
