[package]
name = "Shard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = ["macos-private-api"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
window-vibrancy = "0.6.0"
image = "0.25"
screenshots = "0.6"
tesseract = "0.14"
uuid = { version = "1.8", features = ["v4"] }
tauri-plugin-log = "2.0.0-rc"
arboard = "3.4"
base64 = "0.21"

[features]
# By default Tauri runs in production mode without the dev server attached, enabling development debugging features, devserver support, etc.
# unset = cargoDesktopApp::production_mode()
# default = []
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
