[package]
name = "Shard"
version = "0.6.2"
description = "An AI Research Companion Built on Rust & Tauri"
authors = ["oupadhyay"]
license = "MIT"
repository = "oupadhyay/Shard"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
log = "0.4.22"
tauri = { version = "2.5.1", features = ["macos-private-api"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.13"
window-vibrancy = "0.6.0"
image = { version = "0.25", features = ["png", "jpeg"] }
screenshots = "0.6"
tesseract = "0.14"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
tauri-plugin-log = "2.0.0-rc"
arboard = { version = "3.4.0", features = ["image-data"] }
base64 = "0.21.7"
futures-util = "0.3.30"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
cocoa = "0.25"
regex = "1.11.1"
yahoo_finance_api = "2.2.1"
time = { version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"] }
ticker-sniffer = "0.1.0-alpha9"
arxiv-tools = "1.1.2"
urlencoding = "2.1.3"
quick-xml = { version = "0.37.5", features = ["serialize"] }

[features]
# By default Tauri runs in production mode without the dev server attached, enabling development debugging features, devserver support, etc.
# unset = cargoDesktopApp::production_mode()
# default = []
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
